Lösung zu Aufgabe 41
git-svn-id: https://svn.lug-jena.de/uni-skripte@3584 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -6089,7 +6089,38 @@ Im folgenden seien $R,S,T$ immer Ringe.
 %aufg 41
 \begin{exerc}
   Zeigen Sie, dass für jeden Ring $R$ und jeden projektiven $R$"~Modul $P$
-  gilt: $\rad(P)= J(R)P$.
+  gilt: $\rad(P)= J(R)P$.\\
+  Wir zeigen zunächst die folgende Aussage: Für jede Familie von $R$"~Moduln
+  $(M_{i})_{i\in I}$ gilt:
+  \begin{gather*}
+    J(R)\coprod_{i\in I}M_{i}= \coprod_{i\in I} J(R)M_{i}
+  \end{gather*}
+  Zum Beweis sei $(m_{i}^{j})_{i\in I}\in\coprod_{i\in I} M_{i}$ und $x_{j}\in
+  J(R)$ für $j=1,\dotsc,n$. Dann ist
+  \begin{gather*}
+    \sum_{j=1}^{n} x_{j}(m_{i}^{j})_{i\in I}= \sum_{j=1}^{n}
+       (x_{j}m_{i}^{j})_{i\in I}= \left(\sum_{j=1}^{n}
+       x_{j}m_{i}^{j}\right)_{i\in I}\in\coprod_{i\in I} J(R)M_{i}
+  \end{gather*}
+  Dies zeigt, $J(R)\coprod_{i\in I}M_{i}\subseteq\coprod_{i\in I}J(R)M_{i}$.
+  Sei $q_{i}$ der $i$"~te Injektor und $\sum_{j=1}^{n} x_{j}m_{j}\in
+  J(R)M_{i}$ mit $x_{j}\in J(R)$ und $m_{j}\in M_{i}$. Dann ist
+  $q_{i}(\sum_{j=1}^{n} x_{j}m_{j})= \sum_{j=1}^{n} x_{j}q_{i}(m_{j})\in
+  J(R)\coprod_{i\in I} M_{i}$. Dies zeigt, $q_{i}(J(R)M_{i})\subseteq
+  J(R)\coprod_{i\in I} M_{i}$ und $\coprod_{i\in I} J(R)M_{i}\subseteq
+  J(R)\coprod_{i\in I} M_{i}$. Damit wäre die Aussage gezeigt.
+
+  Ist $F=\coprod_{i\in I} R$ nun ein freier $R$"~Modul, so gilt:
+  \begin{gather*}
+    \rad(F)= \coprod_{i\in I} \rad(\vorunten{R}R)= \coprod_{i\in I} J(R)=
+       \coprod_{i\in I} J(R)R= J(R)\coprod_{i\in I}R= J(R)F
+  \end{gather*}
+  Sei nun $P$ ein projektiver $R$"~Modul. Dann existiert ein freier Modul $F$
+  mit $F= P\times Q$ für einen Untermodul $Q\subseteq F$. Dann ist
+  \begin{gather*}
+    \rad(P)\times\rad(Q)= \rad(F)= J(R)F= J(R)(P\times Q)= J(R)P\times J(R)Q\\
+    \rad(P) = J(R)P
+  \end{gather*}
 \end{exerc}
 
 %aufg 42
