Nicht benutzte Pakete entfernt.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3590 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -60,8 +60,6 @@
                          % dafür muss in SVN noch das Flag svn:keywords
                          % auf "LastChangedRevision LastChangedDate"
                          % gesetzt werden
-% \usepackage{ifpdf}       % Erkennung, ob PDF generiert wird; nützlich zur
-                         % Unterscheidung bei Grafiken \input{XYZ.pdf_t}
 \usepackage{ellipsis}    % Korrektur für \dots
 \usepackage{fixltx2e}
 \usepackage[final,babel]{microtype} % Verbesserung der Typographie
@@ -70,10 +68,6 @@
 \usepackage{todonotes}   % definiert den Befehl \todo{} um sich leicht
                          % Markierungen für offene Aufgaben zu setzen; wird
                          % auch für \help (s.u.) verwendet
-% \usepackage[text]{esdiff} % Zum Setzen von (partiellen) Ableitungen
-                            % (df/dx). Das d wird korrekt in roman
-                            % gesetzt. Verwendung: \diff{f}{x} oder
-                            % \diffp{f}{x} für partielle Ableitungen
 \usepackage{braket}
 \usepackage{amsfonts}
 
@@ -1734,9 +1728,9 @@ Sei $R$ ein Ring.
   Sei $M$ ein $R$"~Modul, $U_{0},U,V_{0},V\subseteq M$ Untermoduln mit
   $U_{0}\subseteq U$ und $V_{0}\subseteq V$. Dann folgt:
   \begin{align*}
-    U_{0}+(U\cap V)/U_{0}+(U\cap V_{0}) &\simeq V_{0}+(V\cap
-    U)/V_{0}+(V\cap U_{0})\\
-    &\simeq U\cap V/(U_{0}\cap V)+(V_{0}\cap U)
+    \sfrac{U_{0}+(U\cap V)}{U_{0}+(U\cap V_{0})} &\simeq \sfrac{V_{0}+(V\cap
+    U)}{V_{0}+(V\cap U_{0})}\\
+    &\simeq \sfrac{U\cap V}{(U_{0}\cap V)+(V_{0}\cap U)}
   \end{align*}
 \end{satz}
 
