Verweis auf Bem 9.2 in den Beweis aufgenommen.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3592 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -3507,7 +3507,7 @@ Sei $R$ ein Ring.
   Jeder $\Z$"~Modul $M$ ist zu einem Untermodul eines injektiven $\Z$"~Moduls
   isomorph.
   \begin{proof}
-    $M$ ist zu einem Faktormodul eines freien $\Z$"~Moduls isomorph. Daher
+    Nach der \autoref{bem:9.2} ist $M$ zu einem Faktormodul eines freien $\Z$"~Moduls isomorph. Daher
     existiert eine Menge $I$ und ein Untermodul $U\subseteq
     F\coloneqq\coprod_{i\in I} \Z$ mit $M\simeq \sfrac{F}{U} =\sfrac{\coprod_{i\in
     I}\Z}{U}\subseteq \sfrac{\coprod_{i\in I} \Q}{U}$ injektiv. 
@@ -5668,7 +5668,7 @@ Im folgenden seien $R,S,T$ immer Ringe.
   \highl[Funktor!kontravarianter]{kontravariante Funktoren} von $\CC$ nach
   $\CD$. (Im Unterschied dazu heißen Funktoren $\CC\rightarrow\CD$ genauer
   \highl[Funktor!kovarianter]{kovariante Funktoren}.) Ein kontravarianter
-  Funktor $\Phi\colon\CC\CD$ ordnet also jedemObjekt $A\in\CC$ ein Objekt
+  Funktor $\Phi\colon\CC\CD$ ordnet also jedem Objekt $A\in\CC$ ein Objekt
   $\Phi A\in\CD$ und jedem Morphismus $f\colon A\rightarrow B$ in $\CC$ einen
   Morphismus $\Phi f\colon\Phi B\rightarrow\Phi A$ zu. Dabei ist $\Phi(g\circ
   f)=\Phi(f)\circ\Phi(g)$ und $\Phi(\id_{A})=\id_{\Phi(A)}$ für alle
