Lösung von Aufgabe 1.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3597 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -5629,6 +5629,9 @@ Im folgenden seien $R,S,T$ immer Ringe.
    \item Die Komposition von Morphismen in $\CC$ ist die Multiplikation in
     $G$.
   \end{enumerate}
+  Die Assoziativität von Morphismen ist assoziativ wegen der Assoziativität
+  der Gruppenelemente. Das neutrale Element der Gruppe ist der
+  Identitätsmorphismus.
 \end{exerc}
 
 % aufg 2
