Lösung zu Aufgabe 13
git-svn-id: https://svn.lug-jena.de/uni-skripte@3604 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -5839,7 +5839,7 @@ Im folgenden seien $R,S,T$ immer Ringe.
     \Psi\Phi A)$ für $A\in\CC$, so ist
     $\eta\coloneqq(\eta_{A})_{A\in\CC}\colon \Id_{\CC}\Rightarrow
     \Psi\circ\Phi$ eine natürliche Transformation; $\eta$ heißt
-    \highl{Einheit} der Adjunktion $(\Phi,\Psi,\nu)$.
+    \highl{Einheit} der Adjunktion\index{Adjunktion!Einheit} $(\Phi,\Psi,\nu)$.
    \item Setzt man $\epsilon_{B}\coloneqq\nu_{\Psi B,B}^{-1}(\id_{\Psi
     B})\in\CD(\Phi\Psi B,B)$ für $B\in\CD$, so ist $\epsilon\coloneqq
     (\epsilon_{B})_{B\in\CD}\colon \Phi\circ\Psi\Rightarrow \Id_{\CD}$ eine
@@ -5863,10 +5863,97 @@ Im folgenden seien $R,S,T$ immer Ringe.
   Bestimmen Sie die Zentren der folgenden Ringe:
   \begin{enumerate}
    \item des Gruppenrings $RG$; dabei ist $R$ ein kommutativer Ring und $G$
-    eine nicht unbedingt endliche Gruppe.
-   \item des Quaternionenschiefkörpers $\HH$.
+    eine nicht unbedingt endliche Gruppe.\\
+    Sei $Q(G)$ die Menge der Konjugationsklassen. Für $C\in Q(G)$ sei
+    $C^{+}\coloneqq\sum_{x\in C} x$ die Klassensumme\todo{Ist das korrekt?}
+    von $C$. Dann ist:
+    \begin{gather*}
+      Z(RG)= \sum_{C\in Q(G)} RC^{+}
+    \end{gather*}
+    \begin{proof}
+      Für $g\in G$ und $C\in Q(G)$ ist $gC^{+}g^{-1}= C^{+}$ und
+      $gC^{+}=C^{+}g$. Daraus folgt leicht die Teilmengenrelation
+      "`$\supseteq$"'.
+
+      Sei nun $\alpha\coloneqq\sum_{g\in G} r_{g}g\in Z(RG)$. Für $h\in G$ ist
+      dann $\alpha= h\alpha h^{-1}= \sum_{g\in G} r_{g}hgh^{-1}$ und
+      $r_{hgh^{-1}}= r_{g}$. Damit ist $r_{g}$ konstant für $g\in Q(G)$. Also
+      folgt auch "`$\subseteq$"'.
+    \end{proof}
+   \item des Quaternionenschiefkörpers $\HH$.\\
+    Sei $    \begin{pmatrix}
+      a& b\\
+      -\overline{b}& \overline{a}
+    \end{pmatrix}\in Z(\HH)$. Dann ist:
+    \begin{gather*}
+      \begin{pmatrix}
+	bi& ai\\
+	\overline{a}i& -\overline{b}i
+      \end{pmatrix}=
+	 \begin{pmatrix}
+	   a& b\\
+	   -\overline{b}& \overline{a}
+	 \end{pmatrix}
+	 \begin{pmatrix}
+	   0& i\\
+	   i& 0
+	 \end{pmatrix}=
+	 \begin{pmatrix}
+	   0& i\\
+	   i& 0
+	 \end{pmatrix}
+	 \begin{pmatrix}
+	   a& b\\
+	   -\overline{b}& \overline{a}
+	 \end{pmatrix}=
+	 \begin{pmatrix}
+	   -\overline{b}i& \overline{a}i\\
+	   ai& bi
+	 \end{pmatrix}
+    \end{gather*}
+    Also ist $a\in\R$ und $b=-\overline{b}$.
+    \begin{gather*}
+      \begin{pmatrix}
+	-b& a\\
+	-\overline{a}& -\overline{b}
+      \end{pmatrix}=
+	 \begin{pmatrix}
+	   a& b\\
+	   -\overline{b}& \overline{a}
+	 \end{pmatrix}
+	 \begin{pmatrix}
+	   0& 1\\
+	   -1& 0
+	 \end{pmatrix}=
+	 \begin{pmatrix}
+	   0& 1\\
+	   -1& 0
+	 \end{pmatrix}
+	 \begin{pmatrix}
+	   a& b\\
+	   -\overline{b}& \overline{a}
+	 \end{pmatrix}=
+	 \begin{pmatrix}
+	   -\overline{b}& \overline{a}\\
+	   -a& -b
+	 \end{pmatrix}
+    \end{gather*}
+    Also ist $b=0$ und wegen $\R\cdot\Id_{2\times2}\subseteq Z(\HH)$ gilt,
+    $Z(\HH)=\R\cdot\Id_{2\times2}\cong\R$.
    \item des Matrixrings $R^{n\times n}$; dabei ist $R$ ein beliebiger Ring
-    und $n\in\N$.
+    und $n\in\N$.\\
+    Offenbar ist $Z(R)\cdot\Id_{n}\subseteq Z(R^{n\times n})$. Sei nun
+    $A=(a_{ij})\in Z(R^{n\times n})$. Für $k,l\in\{1,\dotsc,n\}$ sei $E_{kl}$ die
+    Matrix mit einer $1$ an der Position $(k,l)$ und sonst Nullen. Wegen
+    $E_{kl}A=AE_{kl}$ erhält man:
+    \begin{gather*}
+      a_{li}=
+	 \begin{cases}
+	   0& i\neq l\\
+	   1& i=l
+	 \end{cases}\qquad\forall k,l
+    \end{gather*}
+    Damit ist $Z(R^{n\times n})=Z(R)\cdot\Id_{n}$.
   \end{enumerate}
 \end{exerc}
 
