Lösung zu Aufgabe 17
git-svn-id: https://svn.lug-jena.de/uni-skripte@3608 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -6053,10 +6053,25 @@ Im folgenden seien $R,S,T$ immer Ringe.
 \begin{exerc}
   \begin{enumerate}
    \item Seien $I$ und $J$ nilpotente Ideale in einem Ring $R$. Zeigen Sie,
-    dass $I+J$ auch ein nilpotentes Ideal in $R$ ist.
-   \item Geben Sie ein Primideal an, das nicht maximal ist.
-   \item Finden Sie ein Semiprimideal, das kein Primideal ist.
-   \item Finden Sie ein Nilideal, das nicht nilpotent ist.
+    dass $I+J$ auch ein nilpotentes Ideal in $R$ ist.\\
+    Sei $I^{n}=J^{m}=0$. Dann ist $(I+J)^{n+m}$ die Summe von Produkten der
+    Form $K_{1},\dotsc, K_{n+m}$ mit $K_{i}\in\{I,J\}$. Dabei treten
+    mindestens $n$ Faktoren $I$ oder $J$ auf. Also haben wir:
+    \begin{align*}
+      K_{1}\cdot\dotso \cdot K_{n+m} &\subseteq\prod_{K_{i}=I} K_{i}=0\\
+      K_{1}\cdot\dotso \cdot K_{n+m} &\subseteq\prod_{K_{i}=J} K_{i}=0\\
+    \end{align*}
+   \item Geben Sie ein Primideal an, das nicht maximal ist.\\
+    Es ist $I\coloneqq0\trianglelefteq\Z=R$ nicht maximal. Denn da $\Z$
+    kommutativ ist und $\sfrac{\Z}{0}=\Z$ nullteilerfrei, ist $0$ ein Primideal.
+   \item Finden Sie ein Semiprimideal, das kein Primideal ist.\\
+    Es ist $I=6\Z=2\Z\cdot3\Z= 2\Z\cap3\Z$ der Durchschnitt zweier Primideale.
+    Das ist aber kein Primideal, da $6\notin\PP$.
+   \item Finden Sie ein Nilideal, das nicht nilpotent ist.\\
+    Sei $R=I\coloneqq\sfrac{\Z[x_{1},x_{2},\dotsc]}{(x_{i}^{i}\colon
+    i=1,2,\dotsc)}$. Wegen $0\neq x_{n+1}^{n}\in I^{n}$ ist $I$ nicht
+    nilpotent. Sei nun $p\in I$ und $k\in\N$ maximal, so dass $x_{k}$ in $p$
+    vorkommt. Dann ist $p^{k}=0$. Also ist $I$ ein Nilideal.
   \end{enumerate}
 \end{exerc}
 
