Lösung zu Aufgabe 18
git-svn-id: https://svn.lug-jena.de/uni-skripte@3609 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -6079,9 +6079,17 @@ Im folgenden seien $R,S,T$ immer Ringe.
 \begin{exerc}
   \begin{enumerate}
    \item Zeigen Sie, dass das Zentrum eines einfaches Rings stets ein Körper
-    ist.
+    ist.\\
+    Sei $R$ ein einfacher Ring. Dann ist $Z(R)$ ein kommutativer Ring. Sei nun
+    $0\neq x\in Z(R)$. Dann ist $Rx=xR\trianglelefteq R$. Da $R$ einfach ist,
+    gilt, $xR=Rx=R$ und es existiert ein $y\in R$ mit $xy=yx=1$. Für alle
+    $r\in R$ ist $ry=yxryxy= yrxy=yr$, also $y\in Z(R)$.
    \item Beweisen Sie, dass ein Idempotent $e$ eines einfachen Rings $R$ genau
-    dann in $Z(R)$ liegt, wenn gilt, $eR(1-e)=0= (1-e)Re$.
+    dann in $Z(R)$ liegt, wenn gilt, $eR(1-e)=0= (1-e)Re$.\\
+    Für die Hinrichtung sei $e\in Z(R)$. Dann ist $eR(1-e)= Re(1-e)=
+    R(e-e^{2})= R(e-e)=0$ und $(1-e)Re=(1-e)eR=0$. Für die Rückrichtung sei
+    $r\in R$. Dann ist $er= er-er(1-e)= ere= ere+(1-e)re=re$. Also ist $e\in
+    Z(R)$.
   \end{enumerate}
 \end{exerc}
 
