Bei der universellen Eigenschaft fehlte kanon. Abb. und Zeichnung.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3611 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -4487,9 +4487,19 @@ Sei $R$ ein Ring.
 
 \begin{satz}[Universelle Eigenschaft des Tensorprodukts]\label{satz:13.3}
   Seien $M\in\kat{Mod}_{R}$, $N\in\vorunten{R}\kat{Mod}$, $L\in\kat{Ab}$ und
-  $f\colon M\times N\rightarrow L$ ausgeglichen. Dann existiert genau ein
+  $f\colon M\times N\rightarrow L$ ausgeglichen sowie $t\colon M\times
+  N\rightarrow M\otimes_{R}N$ kanonisch. Dann existiert genau ein
   $f'\in\Hom_{\Z}(M\otimes_{R}N,L)$ mit $f'(m\otimes n)= f(m,n)$ für alle
   $m\in M$ und $n\in N$.
+
+  \begin{tikzpicture}
+    \node (mn) {$M\times N$};
+    \node[below right=1cm of mn] (l) {$L$};
+    \node[right=2cm of mn] (mrn) {$M\otimes_{R}N$};
+    \draw[->] (mn) edge node [above]{$t$} (mrn)
+    (mn) edge node [below]{$f$} (l);
+    \draw[->,dotted] (mrn) edge node [below]{$f'$} (l);
+  \end{tikzpicture}
   \begin{proof}
     Mit den obigen Bezeichnungen ist
     \begin{gather*}
