Lösung zu Aufgabe 22
git-svn-id: https://svn.lug-jena.de/uni-skripte@3615 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -6218,6 +6218,16 @@ Im folgenden seien $R,S,T$ immer Ringe.
 \begin{exerc}
   Zeigen Sie, dass ein Ring~$R$ genau dann ein Schiefkörper ist, wenn $0$ ein
   maximales Linksideal von $R$ ist.
+  \begin{itemize}
+   \item ["`$\Rightarrow$"'] Sei \OE{} $R\neq0$ ein Schiefkörper, also
+    $U(R)=R\setminus\{0\}$. Sei $0\neq I\trianglelefteq R\Rightarrow I\cap
+    U(R)\neq\emptyset$. Für $u\in I\cap U(R)$ folgt nun, dass $r=(ru^{-1})u\in
+    I$ für alle $r\in R$. Also ist $I=R$. Somit ist $0$ maximales Linksideal
+    von $R$.
+   \item ["`$\Leftarrow$"'] Sei $0$ ein maximales Linksideal von $R$ und $x\in
+    R\setminus\{0\}$. Dann $0\neq(x)=R$. Also existiert ein $a\in R$ mit
+    $ax=1\in R$. Nun ist noch zu zeigen, dass $x$ rechtsinvertierbar ist.
+  \end{itemize}
 \end{exerc}
 
 %aufg 23
