Im Satz von Wedderburn fehlte ein \times.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3616 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -2026,7 +2026,7 @@ Sei $R$ ein Ring.
 \begin{satz}[Satz von Wedderburn]\label{satz:6.7}
   Genau dann ist der Ring $R$ halbeinfach, wenn Zahlen $l\in\N_{0}$,
   $d_{1},\dotsc, d_{l}\in\N$ und Schiefkörper $D_{1},\dotsc, D_{l}$ existieren
-  mit $R\cong D_{1}^{d_{1}\times d_{1}}\times\dotso D_{l}^{d_{l}\times
+  mit $R\cong D_{1}^{d_{1}\times d_{1}}\times\dotso \times D_{l}^{d_{l}\times
   d_{l}}$. Gegebenenfalls ist $l$ eindeutig, $d_{1},\dotsc, d_{l}$ sind bis
   auf die Reihenfolge eindeutig und $D_{1},\dotsc, D_{l}$ sind bis auf die
   Reihenfolge und Isomorphie eindeutig.
