Verweis zu Satz 7.1 aufgenommen
git-svn-id: https://svn.lug-jena.de/uni-skripte@3618 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -2232,7 +2232,7 @@ Sei $R$ ein Ring.
    \item Sei $m\in M\in\vorunten{R}\kat{Mod}$. Dann ist $f\colon R\rightarrow M$
     mit $r\mapsto r\cdot m$ eine $R$"~lineare Abbildung. Daher
     $J(R)m=f(J(R))\subseteq\rad(M)$. Daher ist
-    $J(R)M\subseteq\rad(M)$. Insbesondere ist $J(R)R\subseteq J(R)$, d.\,h.
+    $J(R)M\subseteq\rad(M)$ nach dem \autoref{satz:7.1}. Insbesondere ist $J(R)R\subseteq J(R)$, d.\,h.
     $J(R)\trianglelefteq R$.
    \item Für $I\trianglelefteq R$ ist $\sfrac{J(R)+I}{I}\subseteq\rad(\sfrac{R}{I})=J(\sfrac{R}{I})$
     wegen \autoref{satz:7.1}. Falls $I\subseteq J(R)$, ist sogar
