--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -223,6 +223,14 @@
 % bei paralist muss das per \setdefaultenum eingestellt werden
 \setdefaultenum{(i)}{}{}{}
 
+% Der Standardwert für \@pnumwidth ist zu klein. Dadurch gibt es im
+% Inhaltsverzeichnis übervolle Boxen. Mit der untenstehenden
+% Definition wird der Wert verbessert.
+% Siehe <URL:http://projekte.dante.de/DanteFAQ/Verzeichnisse#2>
+\makeatletter
+\renewcommand*{\@pnumwidth}{2em}
+\makeatother
+
 
 \makeindex
 
