N ist ein S-T-Bimodul
git-svn-id: https://svn.lug-jena.de/uni-skripte@3625 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -4884,7 +4884,7 @@ Im folgenden seien $R,S,T$ immer Ringe.
 \begin{bemerk}\label{bem:14.2}
   \begin{enumerate}
    \item Für $M\in\vorunten{R}\kat{Mod}_{S}$ und
-    $N\in\vorunten{R}\kat{Mod}_{T}$ ist
+    $N\in\vorunten{S}\kat{Mod}_{T}$ ist
     $\Hom_{R}(M,N)\in\vorunten{S}\kat{Mod}_{T}$, wobei $(sft)(m)= f(ms)\cdot
     t$ für alle $s\in S$, $t\in T$, $f\in\Hom_{R}(M,N)$ und $m\in M$ ist.
    \item Für $M\in\vorunten{R}\kat{Mod}_{S}$ und
