--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -3626,7 +3626,7 @@ Sei $R$ ein Ring.
 %satz 10.8
 \begin{satz}
   \begin{enumerate}
-   \item Für $q\in\vorunten{R}\kat{Mod}$ und jede kurze exakte Folge in
+   \item Für $Q\in\vorunten{R}\kat{Mod}$ und jede kurze exakte Folge in
     $\vorunten{R}\kat{Mod}$ $0\rightarrow
     L\xrightarrow{f}M\xrightarrow{g}N\rightarrow0$ ist die folgende Sequenz in
     $\vorunten{\Z}\kat{Mod}$ exakt:
