Beweis zu Satz 9.7 ergänzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@3645 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -3086,13 +3086,47 @@ Sei $R$ ein Ring.
 %Vorlesung vom 27.5.2011
 %satz 9.7
 \begin{satz}\label{satz:9.7}
-  $P\in\vorunten{R}\kat{Mod}$ ist genau dann projektiv, wenn Familien
-  $(x_{i})_{i\in I}$, $(f_{i})_{i\in I}$ von Elementen $x_{i}\in P$ und
-  $f_{i}\in\Hom_{R}(P,R)$ mit folgenden Eigenschaften: $x\in
-  P\Rightarrow\abs{\Set{i\in I | f_{i}(x)\neq0}}<\infty\wedge x=\sum_{i\in I}
-  f_{i}(x)x_{i}$ existieren.
+  $P\in\vorunten{R}\kat{Mod}$ ist genau dann projektiv, wenn eine Familie
+  $(x_{i})_{i\in I}$ von Elementen $x_{i}\in P$ und eine Familie
+  $(f_{i})_{i\in I}$ von Elementen $f_{i}\in\Hom_{R}(P,R)$ mit folgenden
+  Eigenschaften: $x\in
+  P\Rightarrow\abs{\Set{i\in I | f_{i}(x)\neq0}}<\infty$ und $x=\sum_{i\in I}
+  f_{i}(x)x_{i}$ existiert.
   \begin{proof}
-    \todo[inline]{Beweis ergänzen}
+    \begin{itemize}
+     \item ["`$\Rightarrow$"'] Sei $P$ projektiv und $(x_{i})_{i\in I}$ ein
+      beliebiges Erzeugendensystem von $P$. Dann ist $F\coloneqq\coprod_{i\in
+      I} R\in\vorunten{R}\kat{Mod}$ frei und $g\colon F\rightarrow P$ mit
+      $(r_{i})_{i\in I}\mapsto\sum_{i\in I} r_{i}x_{i}$ ein
+      $R$"~Epimorphismus. Da $P$ projektiv ist, existiert ein
+      $h\in\Hom_{R}(P,F)$ mit $g\circ h=\id_{P}$. Für $i\in I$ ist dann
+      $f_{i}\coloneqq p_{i}\circ h\in\Hom_{R}(P,R)$. Dabei ist $p_{i}\colon
+      F\rightarrow R$ der $i$"~te Projektor. Für $x\in P$ ist $h(x)\in
+      F=\coprod_{i\in I} R$, also $\abs{\Set{j\in J | f_{j}(x)=
+      p_{j}(h(x))\neq0}}<\infty$. Ferner ist $\sum_{i\in I} f_{i}(x)x_{i}=
+      \sum_{i\in I} p_{i}(h(x))x_{i}= g((p_{i}(h(x)))_{i\in I})= g(h(x))= x$.
+
+      \begin{tikzpicture}
+	\node (p) {$P$};
+	\node [below=1cm of p] (n) {$P$};
+        \node [left=1.5cm of n] (m) {$F$};
+        \node [right=1cm of n] (null) {$0$};
+        \draw[->,dotted] (p) edge node (h) [left]{$h$} (m);
+        \draw[->] (p) edge node (g) [right]{$\id_{P}$} (n) (m) edge
+        node (f) [above]{$g$} (n) (n) edge node (nien) {} (null);
+      \end{tikzpicture}
+     \item ["`$\Leftarrow$"'] Seien $(x_{i})_{i\in I}$ und $(f_{i})_{i\in I}$
+      wie angegeben. Dann ist $(x_{i})_{i\in I}$ ein Erzeugendensystem von
+      $P$. Ferner ist $F\coloneqq\coprod_{i\in I} R\in\vorunten{R}\kat{Mod}$
+      frei und $g\colon F\rightarrow P$ mit $(r_{i})_{i\in I}\mapsto
+      \sum_{i\in I} r_{i}x_{i}$ ein $R$"~Epimorphismus. Außerdem ist $h\colon
+      P\rightarrow F$ mit $x\mapsto(f_{i}(x))_{i\in I}$ eine $R$"~lineare
+      Abbildung mit $g(h(x))= \sum_{i\in I} f_{i}(x)x_{i}=x$ für $x\in P$.
+      Daher ist $g\circ h=\id_{P}$, d.\,h. die kurze exakte Folge
+      $0\rightarrow\ker(g)\hookrightarrow F\xrightarrow{g}P\rightarrow0$
+      zerfällt. Folglich ist $P$ zu einem direkten Summanden von $F$ isomorph,
+      d.\,h. $P$ ist projektiv.
+    \end{itemize}
   \end{proof}
 \end{satz}
 
