--- a/kubieziel-itsich/kopfteil.ltx
+++ b/kubieziel-itsich/kopfteil.ltx
@@ -27,11 +27,18 @@
 \usepackage{amssymb}     % wird für \R, \C,... gebraucht
 \usepackage{fixmath}     % ISO-konforme griech. Buchstaben
 \usepackage{graphicx}
+\usepackage{pigpen}
+\usepackage{pgfpages}
+\usepackage{fancyvrb}
 
 \mode<presentation>{%
   \usetheme{AnnArbor}
   \usecolortheme{beaver}
 }
+
+% \usepackage{handoutWithNotes}
+
+% \pgfpagesuselayout{2 on 1 with notes}[a4paper] %,border shrink=5mm]
 
 
 \title{IT-Sicherheit}
