TODO: VL vom 17.4.2012

--- a/kuelshammer-quadratischeform/skript.ltx
+++ b/kuelshammer-quadratischeform/skript.ltx
@@ -502,6 +502,10 @@ $1+1\neq0$.
   \end{enumerate}
 \end{bemerk}
 
+\todo[inline]{Vorlesung vom 17.April 2012}
+
+
+
 \clearpage
 \appendix
 \begin{thebibliography}{99}
