--- a/kuelshammer-quadratischeform/skript.ltx
+++ b/kuelshammer-quadratischeform/skript.ltx
@@ -75,6 +75,7 @@
                             % \diffp{f}{x} für partielle Ableitungen
 \usepackage{nicefrac}
 \usepackage{braket}
+\usepackage{xfrac}
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
@@ -283,7 +284,7 @@ $1+1\neq0$.
   \highl{$K$"~Bilinearraum}.
 \end{defini}
 
-\begin{bemerk}
+\begin{bemerk}\label{bem:1.1}
   \begin{enumerate}
    \item Sei $(V,\beta)$ ein endlich-dimensionaler $K$"~Bilinearraum mit Basis
     $b_{1},\dotsc, b_{n}$. Dann heißt $A\coloneqq(\beta(b_{1},\dotsc,
@@ -504,6 +505,202 @@ $1+1\neq0$.
 
 \todo[inline]{Vorlesung vom 17.April 2012}
 
+%Vorlesung vom 23. April 2012
+Sei $K$ ein Körper mit Charakteristik ungleich $2$.
+\begin{satz}\label{satz:2.2}
+  Sei $(V,\beta)$ ein nichtausgearteter endlich"=dimensionaler
+  $K$"~Bilinearraum, $\sigma\in O(V,\beta)$ und
+  $\tilde{\sigma}\coloneqq\sigma-\id_{V}$,
+  $L(\sigma)\coloneqq\ker(\tilde{\sigma})= \Set{v\in V | \sigma(v)=v}$. Dann:
+  \begin{enumerate}
+   \item $L(\sigma)=\Bld(\tilde{\sigma})^{\perp}$
+   \item $\tilde{\sigma}^{2}=0\Leftrightarrow\Bld(\tilde{\sigma})$ total isotrop
+   \item $\beta(\tilde{\sigma}(v), \tilde{\sigma}(v))=
+    -2\beta(v,\tilde{\sigma}(v))$ für $v\in V$.
+   \item Ist $\tilde{\sigma}^{2}\neq0$, so existiert ein anisotroper Vektor
+    $0\neq w\in V$ derart, dass $z\coloneqq\tilde{\sigma}(w)$ anisotrop ist.
+    Im Fall $z\neq0$ ist auch $(\tau_{z}\circ\sigma)(w)=w$.
+  \end{enumerate}
+  \begin{proof}
+    \begin{enumerate}
+     \item
+     \item
+     \item
+     \item Sei $\tilde{\sigma}^{2}\neq0$. Wir nehmen an, dass die Aussage
+      falsch ist. Dann gilt für alle anisotropen Vektoren $0\neq w\in V$:
+      \begin{gather}
+	\label{eq:1}
+	   \tilde{\sigma}(w)\neq0\wedge0=\beta(\tilde{\sigma}(w),
+	   \tilde{\sigma}(w))= \beta(w,\tilde{\sigma}(w))
+      \end{gather}
+      Dann ist die Dimension von $V$ größer oder gleich $3$.
+
+      Sei nun $y\in V$ isotrop. Dann existiert ein $z\in V$ mit
+      $\beta(y,z)\neq0$. Wegen $\begin{vmatrix}0& \beta(y,z)\\ \beta(z,y)&
+				  \beta(z,z) \end{vmatrix}=
+      -\beta(y,z)^{2}\neq0$ ist $U\coloneqq Ky+Kz$ nichtausgeartet. Also
+      $V=U\oplus U^{\perp}$. Daher $U^{\perp}$ nichtausgeartet. Wegen $\dim
+      V\geq3$ enthält $U^{\perp}$ einen anisotropen Vektor $w\neq$. Für $a\in
+      K^{\bullet}$ und $u\coloneqq y+aw\in V$ gilt dann:
+      \begin{gather*}
+	\beta(u,u)= \beta(y,y)+a^{2}\beta(w,w)=a^{2}\beta(w,w)\neq0
+      \end{gather*}
+      Wegen der \autoref{eq:1} ist $0=\beta(\tilde{\sigma}(u),u)=
+      \beta(\tilde{\sigma}(y),y)+a(\beta(\tilde{\sigma}(w),y)+
+      \beta(\tilde{\sigma}(y),w))+
+      a^{2}\underbrace{\beta(\tilde{\sigma}(w),w)}_{=0}$. Da $a\in K^{\bullet}$
+      beliebig war, folgt, $\beta(\tilde{\sigma}(y),y)=0$. Damit ist gezeigt,
+      dass gilt: $\beta(\tilde{\sigma}(x),x)=0$ \emph{für alle} $x\in V$.
+      Wegen des obigen Punktes (iii) ist das Bild von $\tilde{\sigma}$ total
+      isotrop. Mit Punkt (ii) folgt der Widerspruch $\tilde{\sigma}^{2}=0$.
+
+      Zum Beweis der zweiten Aussage sei $z\coloneqq\tilde{\sigma}(w)\neq0$.
+      Dann: $\tau_{z}(w)= w-\frac{2\beta(w,z)}{\beta(z,z)}z=
+      w-\frac{2\beta(w,\tilde{\sigma}(w))}{\beta(\tilde{\sigma}(w),
+      \tilde{\sigma}(w))}z= w+z$ wegen des Punktes (iii). Aber
+      $w+z=\sigma(w)$. Insgesamt ist also $\tau_{z}(\sigma(w))=
+      \tau_{z}^{2}(w)= w$.
+    \end{enumerate}
+  \end{proof}
+\end{satz}
+
+%satz 2.3
+\begin{satz}[Cartan"=Dieudonn\'{e}]
+  Sei $(V,\beta)$ ein nichtausgearteter $K$"~Bilinearraum der Dimension
+  $n<\infty$. Dann lässt sich jedes $\sigma\in O(V,\beta)$ als Produkt von
+  höchstens $n$ Spiegelungen schreiben.
+  \begin{proof}
+    Der Beweis erfolgt induktiv nach $n$. Für $n=1$ ist
+    $O(V,\beta)=\{\pm\id_{V}\}$. Sei also $n>1$.
+    \begin{enumerate}[F{a}ll~1]
+     \item Es gilt, $\ker\tilde{\sigma}$ enthält einen anisotropen Vektor
+      $w\neq0$. Dann $V=Kw\oplus (Kw)^{\perp}$ und die Einschränkung $\gamma$
+      von $\beta$ auf $(Kw)^{\perp}=\colon W$ ist auch nichtausgeartet. Ferner
+      ist $\sigma(w)=w$, also auch $\sigma(W)=W$. Daher $\sigma|_{W}\in
+      O(W,\gamma)$. Nach Induktion lässt sich $\sigma|_{W}$ als Produkt von
+      höchstens $n-1$ Spiegelungen schreiben. Jede der Spiegelungen auf $W$
+      lässt sich zu einer Spiegelung auf $V$ fortsetzen, die $w$ fest lässt.
+      Daher ist $\sigma$ selbst ein Produkt von höchstens $n-1$ Spiegelungen
+      auf $V$.
+     \item  $\ker\tilde{\sigma}$ ist total isotrop, d.\,h.
+      $\ker\tilde{\sigma}\subseteq\ker(\tilde{\sigma})^{\perp}=
+      \Bld(\tilde{\sigma})$
+      \begin{enumerate}[F{a}ll~{2}.1]
+       \item $\tilde{\sigma}^{2}\neq0$: Nach dem \autoref{satz:2.2} (iv)
+	existiert ein anisotroper Vektor $0\neq w\in V$ derart, dass
+	$z\coloneqq\tilde{\sigma}(w)$ ist. Im Fall $z=\tilde{\sigma}(w)=0$
+	wären wir in Fall~1. Daher können wir annehmen, dass
+	$z=\tilde{\sigma}(w)\neq0$. Nach \autoref{satz:2.2} (iv) ist
+	$(\tau_{z}\circ\sigma)(w)=w$, d.\,h. auf $\tau_{z}\circ\sigma\in
+	O(V,\beta)$ trifft Fall~1 zu. Daher ist $\tau_{z}\circ\sigma$ ein
+	Produkt von höchstens $n-1$ Spiegelungen. Folglich ist
+	$\sigma=\tau_{z}\circ\tau_{z}\circ\sigma$ ein Produkt von höchstens
+	$n$ Spiegelungen.
+       \item $\tilde{\sigma}^{2}=0$, d.\,h.
+	$\Bld(\tilde{\sigma})\subseteq\ker(\tilde{\sigma})$. Wegen der
+	umgekehrten Relation oben ist dann
+	$\Bld(\tilde{\sigma})=\ker(\tilde{\sigma})$. Aus \autoref{satz:2.2}
+	folgt also: $n= \dim\ker(\tilde{\sigma})+
+	\dim\ker(\tilde{\sigma})^{\perp}= \dim\ker(\tilde{\sigma})+
+	\dim\Bld(\tilde{\sigma})^{\perp}= 2\dim\ker(\tilde{\sigma})$. Die
+	Matrix von $\sigma$ bezüglich einer geeigneten Basis von $V$ hat die
+	folgende Form:
+	\begin{gather*}
+	  \begin{pmatrix}
+	    1_{\sfrac{n}{2}}& *\\
+	    0& 1_{\sfrac{n}{2}}
+	  \end{pmatrix}
+	\end{gather*}
+	Insbesondere ist die Determinante der obigen Matrix $1$. Sei $\tau$
+	eine Spiegelung auf $V$, also $\det(\tau\circ\sigma)=-1$. Daher trifft
+	auf $\tau\circ\sigma$ einer der vorigen Fälle zu. Folglich ist
+	$\tau\circ\sigma$ ein Produkt von höchstens $n$ Spiegelungen. Daher
+	ist $\sigma=\tau\circ\tau\circ\sigma$ ein Produkt von höchstens $n+1$
+	Spiegelungen. Da $n+1$ ungerade und die $\det\sigma=1$ ist, muss
+	$\sigma$ sogar ein Produkt von höchstens $n$ Spiegelungen sein.
+      \end{enumerate}
+    \end{enumerate}
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  \begin{enumerate}
+   \item Im Fall $\dim V=2$ ist also jedes $\sigma\in
+    O(V,\beta)\setminus\SO(V,\beta)$ eine Spiegelung.
+   \item Im Fall $\dim V\leq3$ ist jedes $\sigma\in\SO(V,\beta)$ ein Produkt
+    von zwei Spiegelungen.
+   \item Ist $\dim V=n$ und ist $\sigma\in O(V,\beta)$ ein Produkt von $r$
+    Spiegelungen, so ist $\dim \Set{v\in V | \sigma(v)=v}\geq n-r$. Hat also
+    $\sigma$ außer dem Nullvektor keine Fixpunkte, so lässt sich $\sigma$
+    nicht als Produkt von weniger als $n$ Spiegelungen schreiben.
+   \item Lässt sich $\sigma\in O(V,\beta)$ als Produkt von $n$ Spiegelungen
+    schreiben, dann kann man die erste Spiegelung in diesem Produkt beliebig
+    vorschreiben. Denn ist $\tau$ eine beliebige Spiegelung, so lässt sich
+    $\tau\circ\sigma$ in der Form $\tau\circ\sigma= \sigma_{1}\circ\dotso
+    \circ\sigma_{r}$ mit Spiegelungen $\sigma_{1},\dotsc,\sigma_{r}$
+    schreiben. Dabei ist $r\leq n$. Ein Vergleich der Determinanten liefert,
+    dass $r<n$ und $\sigma=\tau\circ\tau\circ\sigma=
+    \tau\circ\sigma_{1}\circ\dotso \circ\sigma_{r}\circ\tau^{n-r-1}$.
+  \end{enumerate}
+\end{bemerk}
+
+% bemerk 2.4
+\begin{bemerk}[Determinante]
+  Sei $(V,\beta)$ ein endlich"=dimensionaler nichtausgearteter
+  $K$"~Bilinearraum mit Basis $b_{1},\dotsc, b_{n}$ und entsprechender
+  Gram"=Matrix~$A$. Dann heißt
+  \begin{gather*}
+    d(V,\beta)\coloneqq(\det A)\cdot K^{\bullet2}\in \sfrac{K^{\bullet}}{K^{\bullet2}}
+  \end{gather*}
+  \highl{Determinante} von $(V,\beta)$. Nach der \autoref{bem:1.1} (iii) hängt
+  $d(V,\beta)$ nicht von der Basiswahl ab.
+\end{bemerk}
+
+\begin{satz}
+  Für einen zweidimensionalen $K$"~Bilinearraum $(V,\beta)$ sind folgende
+  Aussagen äquivalent:
+  \begin{enumerate}[(1)]
+   \item $(V,\beta)$ ist nichtausgeartet und isotrop.
+   \item $(V,\beta)$ ist nichtausgeartet und $d(V,\beta)=-1\cdot K^{\bullet2}$.
+   \item $(V,\beta)\simeq\subseteq1,-1\rangle$.
+   \item $V$ hat eine Basis mit Gram"=Matrix $
+    \begin{pmatrix}
+      0& 1\\
+      1& 0
+    \end{pmatrix}$.
+  \end{enumerate}
+  \begin{proof}
+    \begin{itemize}
+     \item[(1)$\Rightarrow$(2)] Sei (1) erfüllt und $b_{1},b_{2}$ eine
+      Orthogonalbasis von $(V,\beta)$. Für $i=1,2$ ist dann
+      $\beta(b_{1},b_{2})\neq0$. Sei $x\in V$ isotrop. Wir schreiben $x=
+      rb_{1}+sb_{2}$ mit $r,s\in K$. \OE{} sei $s\neq0$. Dann $0=\beta(x,x)=
+      r^{2}d_{1}+ s^{2}d_{2}$, also $d_{2}= -\frac{r^{2}}{s^{2}}d_{1}$ und
+      $d(V,\beta)= d_{1}d_{2}K^{\bullet2}=-1K^{\bullet2}$.
+     \item [(2)$\Rightarrow$(3)] Sei (2) erfüllt. Dann existiert eine
+      Orthogonalbasis $b_{1}, b_{2}$ von $(V,\beta)$ mit Gram"=Matrix $
+      \begin{pmatrix}
+	a& 0\\
+	0& -a
+      \end{pmatrix}$. Folglich ist $b_{1}+b_{2}, b_{1}-b_{2}$ eine Basis von
+      $V$. Die zugehörige Gram"=Matrix ist $
+      \begin{pmatrix}
+	0& 2a\\
+	2a& 0
+      \end{pmatrix}$. Daher ist $(V,\beta)$ universell. Insbesondere wird die
+      $1$ dargestellt: $1\in D^{\bullet}(V,\beta)$ mit dem Satz 1.8\todo{Link
+      einbauen} folgt: $V,\beta)\simeq\langle1,-1\rangle$.
+     \item [(3)$\Rightarrow$(4)] Ähnlich wie oben.
+     \item [(4)$\Rightarrow$(1)] trivial.
+      
+    \end{itemize}
+  \end{proof}
+\end{satz}
+
+\begin{defini}[Hyperbolische Ebene]
+  Gegebenenfalls heißt $(V,\beta)$ eine
+  \highl[hyperbolische!Ebene]{hyperbolische Ebene}\index{hyperbolisch}.
+\end{defini}
 
 
 \clearpage
