In der Gleichung fehlte ein n. Korrigiert.
Herr Carl wies mich auf einen Fehler im Skript hin. Bei der Abschätzung fehlte ein n.

git-svn-id: https://svn.lug-jena.de/uni-skripte@3674 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-hoehereana1/skript.ltx
+++ b/carl-hoehereana1/skript.ltx
@@ -3992,9 +3992,9 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
   und eine metrische Injektion $J\colon Y\rightarrow\tilde{Y}$.
  \item[] Sei $\dim X=N$. Dann gilt:
   \begin{align*}
-    n^{-\nicefrac{1}{N}} &\leq \CE_{n}(I_{X})\leq3^{-\nicefrac{1}{N}}\qquad
+    n^{-\nicefrac{1}{N}} &\leq \CE_{n}(I_{X})\leq 3n^{-\nicefrac{1}{N}}\qquad
        n=1,2,\dotsc \text{ für reelle Banachräume $X$}\\
-    n^{-\nicefrac{1}{2N}} &\leq \CE_{n}(I_{X})\leq3^{-\nicefrac{1}{2N}}\qquad
+    n^{-\nicefrac{1}{2N}} &\leq \CE_{n}(I_{X})\leq 3n^{-\nicefrac{1}{2N}}\qquad
        n=1,2,\dotsc \text{ für komplexe Banachräume $X$}\\
   \end{align*}
 \end{description}
