Kleinere Fehler behoben
git-svn-id: https://svn.lug-jena.de/uni-skripte@3678 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-hoehereana1/skript.ltx
+++ b/carl-hoehereana1/skript.ltx
@@ -3809,7 +3809,7 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
    \item Offensichtlich ist, falls $E$ komplementiert ist, auch $F$
     komplementiert.
    \item Für die zugehörige Projektion $P\coloneqq P_{E}$ und $P_{F}=I-P$ sagen
-    wir: projiziert $X$ auf $E$ entlamng $F$. Es gilt, $R(P)=E$ und $N(P)=F$.
+    wir: projiziert $X$ auf $E$ entlang $F$. Es gilt, $R(P)=E$ und $N(P)=F$.
    \item Es gibt abgeschlossene Teilräume, die nicht komplementiert sind.
     Beispielsweise  ist $c_{0}\subset\ell_{\infty}$ nicht komplementiert in
     $\ell_{\infty}$, d.\,h. es gibt keine Projektion $P\in\CL(\ell_{\infty})$
@@ -3820,11 +3820,11 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
 
 \section{Approximationszahlen und approximierbare Operatoren}
 
-\begin{defini}
+\begin{defini}[Approximationszahl]
   Seien $X$ und $Y$ Banachräume und $T\in\CL(X,Y)$. Die $n$"~te
   \highl{Approximationszahl} von $T$ ist definiert durch:
   \begin{gather*}
-    a_{n}(T)\coloneqq\inf\{\norm{T^{-1}}\colon A\in\CF(X,Y), \rg(A)<n\}
+    a_{n}(T)\coloneqq\inf\{\norm{T-A}\colon A\in\CF(X,Y), \rg(A)<n\}
   \end{gather*}
 \end{defini}
 
@@ -3832,13 +3832,13 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
 \paragraph{Eigenschaften der Approximationszahlen}
 \begin{description}
  \item[Monotonie] $\norm{T}=a_{1}(T)\geq a_{2}(T)\geq\dotsb\geq0, T\in\CL(X,Y)$.
- \item[Additivität] $a_{n+m-1}(T+S)= \leq a_{n}(T)+a_{m}(S)$ für
+ \item[Additivität] $a_{n+m-1}(T+S) \leq a_{n}(T)+a_{m}(S)$ für
   $S,T\in\CL(X,Y)$
  \item[Multiplikativität] $a_{n+m-1}(TS)\leq a_{n}(T)a_{m}(S)$ für
   $S\in\CL(X,Y), T\in\CL(Y,Z)$. Insbesondere ist
   $a_{n}(STR)\leq\norm{S}a_{n}(T)\norm{R}$
  \item[Normierung] Sei $\dim X\geq n$. Dann gilt: $a_{n}(I_{X})=1, I_{X}\colon
-  X\rightarrow X, I_{X}x=x$ für $x\in X$.
+  X\rightarrow X, I_{X}x\coloneqq x$ für $x\in X$.
  \item[Rang"=Eigenschaft] Sei $T\in\CL(X,Y)$. Dann gilt:
   $a_{n}(T)=0\Leftrightarrow\rg(T)<n$.
   \begin{proof}
@@ -3847,7 +3847,8 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
 \end{description}
 
 \begin{defini}[Approximierbarer Operator]
-  Ein Operator $T\in\CL(X,Y)$ ist genau dann approximierbar, wenn es für alle
+  Ein Operator $T\in\CL(X,Y)$ ist genau dann
+  \highl{approximierbar}\index{Operator!approximierbarer}, wenn es für alle
   $\epsilon>0$ ein $A\in\CF(X,Y)$ mit $\norm{T-A}\leq\epsilon$ gibt.
 \end{defini}
 
@@ -3887,7 +3888,7 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
   Für jedes Paar von Banachräumen $X,Y$ sei $\CJ(X,Y)\subset\CL(X,Y)$ gegeben.
   Die Klasse $\CJ\coloneqq\bigcup_{X,Y} \CJ(X,Y)$ heißt
   \highl{Operatorenideal}, wenn:
-  \begin{enumerate}[$J_{1}$]
+  \begin{enumerate}[(J1)]
    \item $a\otimes y\in\CJ(X,Y)$ für $a\in X', y\in Y$.
    \item $S,T\in\CJ(X,Y)\Rightarrow S+T\in\CJ(X,Y)$
    \item $R\in\CL(X_{0},X), T\in\CJ(X,Y), S\in\CL(Y,Y_{0})\Rightarrow
@@ -3898,29 +3899,29 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
 \begin{bemerk}
   \begin{enumerate}
    \item $\lambda\in\K, T\in\CJ(X,Y)\Rightarrow\lambda T= \lambda
-    I_{y}TI_{x}\in\CJ(X,Y)$. Damit ist nach der Eigenschaft $J_{2}$ das
+    I_{y}TI_{x}\in\CJ(X,Y)$. Damit ist nach der Eigenschaft (J2) das
     $\CJ(X,Y)$ ein linearer Teilraum von $\CL(X,Y)$.
-   \item Sei $\CF\subset\CJ$ nach der Eigenschaft $J_{1}$ und es gelte die
+   \item Sei $\CF\subset\CJ$ nach der Eigenschaft (J1) und es gelte die
     obige Eigenschaft, d.\,h. $\CF$ ist selbst ein Operatorenideal  und zwar
     das kleinste. $\CL$ ist das größte Operatorenideal. \todo{Beweis einfügen}
   \end{enumerate}
 \end{bemerk}
 
-\begin{defini}
-  Sei $\CJ$ ein Operatorenideal. Dann gehört $T\in\CL(X,Y)$ genau dann zum
-  Abschluss $\cl(\CJ(X,Y))$, wenn $(T_{n})\subset\CJ(X,Y)$ mit $\lim
+\begin{defini}[Abschluss]
+  Sei $\CJ\subset \CL$ ein Operatorenideal. Dann gehört $T\in\CL(X,Y)$ genau dann zum
+  \highl{Abschluss} $\cl(\CJ(X,Y))$, wenn $(T_{n})\subset\CJ(X,Y)$ mit $\lim_{n\rightarrow\infty}
   \norm{T-T_{n}}=0$ existiert.
 \end{defini}
 
 \begin{bemerk}
   Es ist $\cl(\CJ)\coloneqq\bigcup_{X,Y} \cl(\CJ(X,Y))$ ein Operatorenideal.
   \begin{proof}
-    Die Eigenschaft $J_{1}$ ist klar, denn $\CJ\subset\cl(\CJ)\Rightarrow
+    Die Eigenschaft (J1) ist klar, denn $\CJ\subset\cl(\CJ)\Rightarrow
     a\otimes y\in\cl(\CJ(X,Y)), a\in X', y\in Y$. Für den Nachweis der
-    Eigenschaft $J_{2}$ sei $S_{n}, T_{n}\in\CJ(X,Y)$ und $S_{n}\rightarrow
+    Eigenschaft (J2) sei $S_{n}, T_{n}\in\CJ(X,Y)$ und $S_{n}\rightarrow
     S\in\cl(\CJ), T_{n}\rightarrow T\in\cl(\CJ)$. Damit folgt,
     $S_{n}+T_{n}\rightarrow S+T\in\cl(\CJ)$. Schließlich bleibt noch die
-    Eigenschaft $J_{3}$ zu zeigen: Sei $R\in\CL(X_{0}, X), T\in\cl(\CJ),
+    Eigenschaft (J3) zu zeigen: Sei $R\in\CL(X_{0}, X), T\in\cl(\CJ),
     S\in\CL(Y,Y_{0})$. Dann existiert $(T_{n})\subset\CJ(X,Y)$ mit
     $T_{n}\rightarrow T$. Da $\CJ$ ein Ideal ist, folgt, $ST_{n}R\in\CJ(X_{0},
     Y_{0})$ mit $ST_{n}R\rightarrow STR\in\cl(\CJ)$.
@@ -3928,7 +3929,8 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
 \end{bemerk}
 
 \begin{defini}[Abgeschlossenes Operatorenideal]
-  Ein Operatorenideal $\CJ$ heißt genau dann abgeschlossen, wenn
+  Ein Operatorenideal $\CJ$ heißt genau dann
+  \highl{abgeschlossen}\index{Operatorenideal!abgeschlossenes}, wenn
   $\cl(\CJ)=\CJ$.
 \end{defini}
 
@@ -3965,7 +3967,7 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
      \item $\CA$ ist abgeschlossen, d.\,h. $\cl(\CA(X,Y))=\CA(X,Y)$. Sei
       $T\in\cl(\CA(X,Y))$, d.\,h. es existiert $(T_{n})\subset\CA(X,Y)$ mit
       $\norm{T-T_{n}}\rightarrow0$. Also $a(T)= a(T-T_{n}+T_{n})\leq
-      a(T-T_{n}) +a(T_{n})\leq\norm{T-T_{n}}\Rightarrow a(T)=0\Rightarrow
+      a(T-T_{n}) +a(T_{n})\leq a_{1}(T-T_{n})=\norm{T-T_{n}}\Rightarrow a(T)=0\Rightarrow
       T\in\CA(X,Y)$.
     \end{enumerate}
   \end{proof}
@@ -4120,7 +4122,7 @@ y}=\sup_{\norm{x}\leq1} \norm{(a\otimes y)(x)}= \sup_{\norm{x}\leq1}
 
 \begin{bemerk}
   \begin{enumerate}[(i)]
-   \item Der Beweis für $\C$"~Banachräume änder sich nur dahingehend, dass
+   \item Der Beweis für $\C$"~Banachräume ändert sich nur dahingehend, dass
     $A\colon X\rightarrow\C^{N}$ ein Isomorphismus ist, der auch als
     $\tilde{A}\colon X\rightarrow\R^{2N}$ aufgefasst werden kann.
    \item Die 2 aus der Eigenschaft (4) ist optimal, d.\,h. sie kann nicht
