Paket xfrac eingebunden und Befehl \xm definiert.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3679 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-hoehereana1/skript.ltx
+++ b/carl-hoehereana1/skript.ltx
@@ -47,7 +47,7 @@
 \usepackage{xspace}      % wird weiter unten gebraucht
 \usepackage{slashbox}    % für schräge Striche links oben in der
                          % Tabelle; s. texdoc slashbox
-
+\usepackage{xfrac}
 \usepackage{paralist}    % besseres enumerate und itemize und neue
                          % compactenum/compactitem; s. texdoc paralist
 
@@ -66,6 +66,7 @@
 \usepackage{pst-node}
 \usepackage{xypic}
 \usepackage{mathtools}
+
 
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
@@ -196,6 +197,8 @@
 \newcommand*{\CK}{\mathcal{K}}
 \newcommand*{\CL}{\mathcal{L}}
 \newcommand*{\CM}{\mathcal{M}}
+
+\newcommand*{\xm}{\sfrac{X}{M}}            % X/M
 
 \DeclareMathOperator{\cl}{cl}
 \DeclareMathOperator{\spn}{span}
@@ -1370,11 +1373,11 @@ Analog gilt $d_{Y}(y_{1}, y_{2})\leq d((x_{1}, y_{1}), (u,v))+ d((u,v),
   \begin{gather*}
     \ndist{x}\coloneqq \inf\{\norm{x-y}\colon y\in M\}
   \end{gather*}
-  eine Norm auf $X/_M$ definiert. Ist $X$ ein Banachraum, so
-  ist $X/_M$ ebenfalls ein Banachraum. Es ist:
+  eine Norm auf $\xm$ definiert. Ist $X$ ein Banachraum, so
+  ist $\xm$ ebenfalls ein Banachraum. Es ist:
   \begin{align*}
     [x]+[y] &\coloneqq  [x+y] & [x] &\coloneqq  \{x+y\colon y\in M\}\\
-    \alpha[x] &\coloneqq  [\alpha\cdot x] & X/_M &\coloneqq  \{[x]\colon x\in X\}
+    \alpha[x] &\coloneqq  [\alpha\cdot x] & \xm &\coloneqq  \{[x]\colon x\in X\}
   \end{align*}
   \begin{proof}
     \begin{enumerate}[1.\,Schr{i}tt]
@@ -1407,10 +1410,10 @@ Analog gilt $d_{Y}(y_{1}, y_{2})\leq d((x_{1}, y_{1}), (u,v))+ d((u,v),
 	&= \ndist{x}+ \ndist{y}
       \end{align*}
      \item Mit der Anwendung des Vollständigkeitskriteriums
-      (\autoref{satz:i.23}) gilt, dass $X/_M$ vollständig ist, wenn auch $X$
-      vollständig ist. Sei  $([x_{n}])\subseteq X/_M$ mit
+      (\autoref{satz:i.23}) gilt, dass $\xm$ vollständig ist, wenn auch $X$
+      vollständig ist. Sei  $([x_{n}])\subseteq \xm$ mit
       $\sum_{n=1}^{\infty} \ndist{x_{n}}<\infty$. Es ist zu zeigen, dass
-      $\sum_{n=1}^{\infty} [x_{n}]\in X/_M$. Es ist
+      $\sum_{n=1}^{\infty} [x_{n}]\in \xm$. Es ist
       $y_{n}\in[x_{n}]\colon\norm{y_{n}}\leq \ndist{x_{1}}+2^{-n}$. Somit ist
       $\sum_{n=1}^{\infty} \norm{y_{n}} \leq\sum_{n=1}^{\infty} \ndist{x_{n}}
       +\sum_{n=1}^{\infty} 2^{-n}$. Der Ausdruck ist kleiner als unendlich und
@@ -1420,15 +1423,15 @@ Analog gilt $d_{Y}(y_{1}, y_{2})\leq d((x_{1}, y_{1}), (u,v))+ d((u,v),
       y_{k}} \xrightarrow{n\rightarrow\infty}0$. Nach der Definition von
       $\norm{\cdot}$ gilt immer $\ndist{x}\leq\norm{x}$. Insgesamt folgt somit
       $\sum_{k=1}^{\infty} [x_{k}]= \lim_{n\rightarrow\infty}
-      \sum_{k=1}^{n} [x_{k}]= [y]\in X/_M$. Nach dem
-      Vollständigkeitskriterium ist damit $X/_M$ vollständig.
+      \sum_{k=1}^{n} [x_{k}]= [y]\in \xm$. Nach dem
+      Vollständigkeitskriterium ist damit $\xm$ vollständig.
     \end{enumerate}
   \end{proof}
 \end{satz}
 
 \begin{defini}[Quotientenabbildung]
   Sei $X$ ein Vektorraum und $M\subseteq X$ ein linearer Teilraum. Die
-  Abbildung $Q_{M}\colon X\rightarrow X/_M$ definiert durch $Q_{M}x\coloneqq [x]$
+  Abbildung $Q_{M}\colon X\rightarrow \xm$ definiert durch $Q_{M}x\coloneqq [x]$
   heißt \highl{Quotientenabbildung}.
 \end{defini}
 
@@ -1436,19 +1439,19 @@ Analog gilt $d_{Y}(y_{1}, y_{2})\leq d((x_{1}, y_{1}), (u,v))+ d((u,v),
 \begin{satz}
   Sei $X$ ein normierter Raum und $M\subseteq X$ ein abgeschlossener linearer
   Teilraum. Dann gilt für die Quotientenabbildung $Q_{M}\colon X\rightarrow
-  X/_M$ mit $Q_{M}(\mathring{B}_{X})= \mathring{B}_{X/_M}$ (offene
+  \xm$ mit $Q_{M}(\mathring{B}_{X})= \mathring{B}_{\xm}$ (offene
   Einheitskugeln).
   \begin{proof}
     \begin{itemize}
      \item["`$\subseteq$"'] Sei $x\in\mathring{B}_{X}$. Dann gilt
       $\norm{Q_{M}x}=\ndist{x}\leq\norm{x}<1\Rightarrow
-      Q_{M}x\in\mathring{B}_{X/_M}$.
-     \item["`$\supseteq$"'] Sei $[x]\in\mathring{B}_{X/_M}$, d.\,h. $\ndist{x}=
+      Q_{M}x\in\mathring{B}_{\xm}$.
+     \item["`$\supseteq$"'] Sei $[x]\in\mathring{B}_{\xm}$, d.\,h. $\ndist{x}=
       \inf\{\norm{x-z}\colon z\in M\}<1$. Dann existiert $z_{0}\in
       M\colon\norm{x-z_{0}}<1$. Wir setzen $y\coloneqq x-z_{0}$. Dann ist
       $y\in\mathring{B}_{X}$ und es gilt, $Q_{M}y= [y]= [x-z_{0}]= [x]-
       \underbrace{[z_{0}]}_{=0}=[x]$, d.\,h. $Q_{M}\mathring{B}_{X}\supseteq
-      \mathring{B}_{X/_M}$.
+      \mathring{B}_{\xm}$.
     \end{itemize}
   \end{proof}
 \end{satz}
@@ -1457,11 +1460,11 @@ Analog gilt $d_{Y}(y_{1}, y_{2})\leq d((x_{1}, y_{1}), (u,v))+ d((u,v),
 \begin{satz}
   Sei $X$ ein Vektorraum, $M,N\subseteq X$ lineare Teilräume und $X=M\oplus
   N$. Dann existiert eine lineare Bijektion von $N$ auf $X$ nach $M$, also $N$
-  auf $X/_M$.
+  auf $\xm$.
   \begin{proof}
-    Sei $\phi\colon N\rightarrow X/_M$ definiert durch $\phi(x)\coloneqq [x]$ mit
+    Sei $\phi\colon N\rightarrow \xm$ definiert durch $\phi(x)\coloneqq [x]$ mit
     $x\in N$. Dann ist $\phi\coloneqq Q_{M}|_{M}$ ein Isomorphismus von $N$ auf
-    $X/_M$.
+    $\xm$.
 
     Wir zeigen zuerst die Linearität: Für $\alpha, \beta\in\K$ und $x,y\in N$
     gilt $\phi(\alpha x+\beta y)= [\alpha x+\beta y]= [\alpha x]+ [\beta y]=
@@ -1474,7 +1477,7 @@ Analog gilt $d_{Y}(y_{1}, y_{2})\leq d((x_{1}, y_{1}), (u,v))+ d((u,v),
     N=\{0\}\Rightarrow x=y$. Also ist $\phi$ injektiv.
 
     Nun verbleibt noch die Surjektivität zu zeigen: Sei $[x]\in
-    X/_M$. Nach der Definition von $[x]$ ist $x=x_{1}+ x_{2}$ mit
+    \xm$. Nach der Definition von $[x]$ ist $x=x_{1}+ x_{2}$ mit
     $x_{1}\in M_{1}$ und $x_{2}\in M$. Es folgt, dass $[x]=Q_{M}(x)=
     Q_{M}(x_{1}+x_{2})= [x_1+x_2]= [x_1]+ [x_2]=
     \underbrace{Q_{M}(x_{1})}_{=0}+ Q_{M}(x_{2})=
@@ -1484,7 +1487,7 @@ Analog gilt $d_{Y}(y_{1}, y_{2})\leq d((x_{1}, y_{1}), (u,v))+ d((u,v),
 
 \begin{defini}[Codimension]
   Sei $M\subseteq X$ ein linearer Teilraum eines Vektorraums. Dann wird die
-  \highl{Codimension} von $M$ durch $\cdm M\coloneqq \dim X/_M$.
+  \highl{Codimension} von $M$ durch $\cdm M\coloneqq \dim \xm$.
 \end{defini}
 
 % weiter nach dem Einschub
